--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -19,7 +19,7 @@ on early-init
     write /sys/block/zram0/comp_algorithm lz4
 
 on init
-    export LD_SHIM_LIBS "/system/vendor/lib/hw/camera.vendor.bacon.so|libshim_camera.so:/system/lib/libcamera_client.so|libshim_cameraclient.so"
+    export LD_SHIM_LIBS "/system/vendor/lib/hw/camera.vendor.bacon.so|libshim_camera.so:/system/lib/libcamera_client.so|libshim_camera_parameters.so"
 
     symlink /sdcard /storage/sdcard0
 
