--- a/configs/libnfc-nxp.conf
+++ b/configs/libnfc-nxp.conf
@@ -16,6 +16,8 @@ NXPLOG_NCIX_LOGLEVEL=0x02
 NXPLOG_NCIR_LOGLEVEL=0x02
 NXPLOG_FWDNLD_LOGLEVEL=0x02
 NXPLOG_TML_LOGLEVEL=0x02
+NXPLOG_TML_LOGLEVEL=0x01
+NFC_DEBUG_ENABLED=1
 
 ###############################################################################
 # Nfc Device Node name
@@ -28,8 +30,10 @@ NXP_NFC_DEV_NODE="/dev/pn544"
 MIFARE_READER_ENABLE=0x01
 
 ###############################################################################
-# File location for Firmware
-#FW_STORAGE="/etc/firmware/libpn547_fw.so"
+# Firmware file type
+#.so file   0x01
+#.bin file  0x02
+NXP_FW_TYPE=0x01
 
 ###############################################################################
 # System clock source selection configuration
@@ -59,13 +63,6 @@ NXP_ACT_PROP_EXTN={2F, 02, 00}
 ###############################################################################
 # NFC forum profile settings
 NXP_NFC_PROFILE_EXTN={20, 02, 05, 01, A0, 44, 01, 00}
-
-###############################################################################
-# Standby enable settings
-#    0x00 - Disabled
-#    0x01 - Enabled
-NXP_CORE_STANDBY={2F, 00, 01, 01}
-
 
 ###############################################################################
 # NXP RF ALM (NO BOOSTER) configuration settings for FW VERSION = 08.01.18
@@ -433,37 +430,21 @@ NXP_CORE_CONF={ 20, 02, 2B, 0D,
         }
 
 ###############################################################################
-# Mifare Classic Key settings
-#NXP_CORE_MFCKEY_SETTING={20, 02, 25,04, A0, 51, 06, A0, A1, A2, A3, A4, A5,
-#                                     A0, 52, 06, D3, F7, D3, F7, D3, F7,
-#                                     A0, 53, 06, FF, FF, FF, FF, FF, FF,
-#                                     A0, 54, 06, 00, 00, 00, 00, 00, 00}
-
-###############################################################################
-# Default SE Options
-# No secure element 0x00
-# eSE               0x01
-# UICC              0x02
-# MULTI_SE          0x03
-NXP_DEFAULT_SE=0x01
-
-###############################################################################
-NXP_DEFAULT_NFCEE_TIMEOUT=0x06
-
-###############################################################################
 #Enable SWP full power mode when phone is power off
 NXP_SWP_FULL_PWR_ON=0x00
 
 ###############################################################################
-#Chip type
-#PN547C2            0x01
-#PN65T              0x02
-NXP_NFC_CHIP=0x02
+#Set the default Felica T3T System Code OffHost route Location :
+# host  0x00
+# eSE   0x01
+# UICC  0x02
+# UICC2 0x03
+DEFAULT_SYS_CODE_ROUTE=0x00
 
 ###############################################################################
-#SWP Reader feature
-#Timeout in seconds
-NXP_SWP_RD_START_TIMEOUT=0x0A
-#Timeout in seconds
-NXP_SWP_RD_TAG_OP_TIMEOUT=0x01
+#Set the default Felica T3T System Code :
+#DEFAULT_SYS_CODE={FF,FF}
 
+##############################################################################
+# Extended APDU length for ISO_DEP
+#ISO_DEP_MAX_TRANSCEIVE=0xFEFF
